--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>CRO Audit Tool</title>
+  <style>
+    body { font-family: sans-serif; padding: 20px; max-width: 700px; margin: auto; }
+    textarea, input { width: 100%; margin: 10px 0; padding: 8px; }
+    button { padding: 10px 20px; }
+    #result { white-space: pre-wrap; margin-top: 20px; border: 1px solid #ccc; padding: 10px; }
+  </style>
 </head>
 <body>
-  <h1>CRO Audit Generator</h1>
-  <form id="form">
-    <label>Website URL:</label><br>
-    <input type="text" id="url" required><br><br>
-    <label>Description:</label><br>
-    <textarea id="description" rows="4"></textarea><br><br>
-    <button type="submit">Generate Audit</button>
-  </form>
-
-  <h2>Audit Result:</h2>
-  <pre id="result" style="white-space: pre-wrap;"></pre>
+  <h1>CRO Audit Tool (Free GPT)</h1>
+  <input type="text" id="url" placeholder="Website URL" />
+  <textarea id="description" rows="4" placeholder="Brief description of the site or tool"></textarea>
+  <button onclick="generateAudit()">Generate Audit</button>
+  <div id="result"></div>
 
   <script>
-    document.getElementById('form').addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const url = document.getElementById('url').value;
-      const description = document.getElementById('description').value;
+    async function generateAudit() {
+      const url = document.getElementById("url").value;
+      const description = document.getElementById("description").value;
 
-      const response = await fetch('/api/audit', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ url, description })
-      });
+      document.getElementById("result").innerText = "Loading...";
 
-      const data = await response.json();
-      document.getElementById('result').textContent = data.audit || 'Error: ' + data.error;
-    });
+      try {
+        const res = await fetch("/api/audit", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ url, description })
+        });
+        const data = await res.json();
+        if (data.result) {
+          document.getElementById("result").innerText = data.result;
+        } else {
+          document.getElementById("result").innerText = data.error || "Something went wrong";
+        }
+      } catch (err) {
+        document.getElementById("result").innerText = "Request failed";
+      }
+    }
   </script>
 </body>
 </html>
